# Ingenue

./: .ccls  .clang-format  .gitignore  CMakeLists.txt
cmake/: forceoutline.cmake  resources.cmake  tools.cmake  warnings.cmake
ingenue/: .licenseheader  CMakeLists.txt  fmt.c  ingenue.h  linux.c  pch.h  str.c  win32.c
test/: CMakeLists.txt  main.c
